bespin-api.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-api
    name: bespin-api
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: dukegcb/bespin-api:1.2.2-apache-openshift
      from:
        kind: DockerImage
        name: dukegcb/bespin-api:1.2.2-apache-openshift
      generation: null
      importPolicy: {}
      name: 1.2.2-apache
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-api
    name: bespin-api
  spec:
    replicas: 1
    selector:
      app: bespin-api
      deploymentconfig: bespin-api
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: bespin-api
          deploymentconfig: bespin-api
      spec:
        containers:
        - image: dukegcb/bespin-api:1.2.2-apache-openshift
          volumeMounts:
          - name: bespin-web-certs-volume
            mountPath: /bespin-web-certs/
            readOnly: true
          name: bespin-api
          ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 8000
            protocol: TCP
          - containerPort: 443
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /srv/ui
            name: bespin-api-volume-1
        volumes:
        - emptyDir: {}
          name: bespin-api-volume-1
        - name: bespin-web-certs-volume
          secret:
            secretName: bespin-web-cert
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - bespin-api
        from:
          kind: ImageStreamTag
          name: bespin-api:1.2.2-apache
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-api
    name: bespin-api
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    - name: 443-tcp
      port: 443
      protocol: TCP
      targetPort: 443
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: bespin-api
      deploymentconfig: bespin-api
  status:
    loadBalancer: {}
kind: List
metadata: {}
