bespin-ui.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: nodejs-8-centos7
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: centos/nodejs-8-centos7
      from:
        kind: DockerImage
        name: centos/nodejs-8-centos7
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: bespin-ui
    name: bespin-ui-ember-build
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: bespin-ui
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
# Build 1 - ember build
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: bespin-ui-ember-build
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: bespin-ui-ember-build:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/dleehr/bespin-ui
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nodejs-8-centos7:latest
      type: Source
    triggers:
    - github:
        secret: zXOy_ADs4gx5_RTWJ1X3
      type: GitHub
    - generic:
        secret: tptKXlAodUBJEtvDbpB5
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
# Build 2 - copy built application into apache image
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: bespin-ui
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: bespin-ui:latest
    source:
      type: Dockerfile
      dockerfile: |-
        FROM centos/httpd-24-centos7:latest
        COPY dist/* /var/www/html/
      images:
      - from:
          kind: ImageStreamTag
          name: bespin-ui-ember-build:latest
        paths:
        - sourcePath: /opt/app-root/src/dist
          destinationDir: "dist"
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: httpd-24-centos7:latest
    triggers:
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: bespin-ui
  spec:
    replicas: 1
    selector:
      app: bespin-ui
      deploymentconfig: bespin-ui
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: bespin-ui
          deploymentconfig: bespin-ui
      spec:
        containers:
        - image: bespin-ui:latest
          name: bespin-ui
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - bespin-ui
        from:
          kind: ImageStreamTag
          name: bespin-ui:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: bespin-ui
    name: bespin-ui
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: bespin-ui
      deploymentconfig: bespin-ui
  status:
    loadBalancer: {}
kind: List
metadata: {}
